@startuml
'https://plantuml.com/class-diagram


interface AbstractFactory

OrderPizza o-- AbstractFactory

AbstractFactory <|.. BJFactory
AbstractFactory <|.. LDFactory

BJFactory *-- BJCheessPizza
BJFactory *-- BJPepperPizza
LDFactory *-- LDCheessPizza
LDFactory *-- LDPepperPizza

Pizza <|-- BJCheessPizza
Pizza <|-- BJPepperPizza

Pizza <|-- LDCheessPizza
Pizza <|-- LDPepperPizza






class Pizza {
prepare():void
bake():void
cut():void
box():void
}



@enduml